Adding pages and secrets

--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
 </nav>
     <section class="content"><h1 id="about">About</h1>
 
-<p><strong>K25fF</strong> is the author of this website, who lives somewhere in England, it is presumed.</p>
+<p><strong>K25fF</strong> is the author of this website. According to rumours and grainy photographs of sightings, they live somewhere in England.</p>
 
-<p>They’ve spent the past half-decade or so working with designing characters, creatures, monsters and worlds. So far, their longest-running project is <a href="/chiasmata/archive">Chiasmata</a>, a reader-controlled “forum adventure”, which started out on the MSPA forums in 2013, and has outlived said forums by several years now. Chiasmata is, at its core, an ontological mystery, with elements of philosophical horror, strong interactivity on the part of its audience, and numerous puzzles and mysteries leading to bonus materials. These Alternate Reality Game (ARG) elements paint a picture of a background to the setting of the comic itself, adding to the mystery and interactivity of the comic and its setting.</p>
+<p>They’ve spent the past half-decade or so working with designing characters, creatures, monsters, and worlds. So far, their longest-running project is <a href="/chiasmata/archive">Chiasmata</a>, a reader-controlled “forum adventure”, which started out on the MSPA forums in 2013 and has outlived said forums by several years now. Chiasmata is, at its core, an ontological mystery with elements of philosophical horror, strong interactivity on the part of its audience, and numerous puzzles and mysteries leading to bonus materials. These Alternate Reality Game (ARG) elements paint a picture of a background to the setting of the comic itself, adding to the mystery and interactivity of the comic and its setting.</p>
 
 <p>More recently, they started to write and serially publish <a href="http://quietandantagonism.com">Quiet and Antagonism</a>, a fantasy story of cosmic scope, set as an outsider’s perspective into a multiverse where <em>concepts</em> are as much a natural force as gravity is, and the twisting path the protagonist must take on her journey home.</p>
 </section>
