--- a/chiasmata/spoilercast.html
+++ b/chiasmata/spoilercast.html
@@ -83,6 +83,11 @@
         <h4 style="color: #C700FF">???</h4>
         <p>ERROR: NO SUCH CHARACTER OF THIS DESIGNATION EXISTS.</p>
     </div>
+    <div class="column">
+        <img src="/chiasmata/images/cast/KNOW.png" alt="Ibrahim">
+        <h4>Ibrahim 'Ibby' Chakrabati</h4>
+        <p>The all-knowing, all-seeing person who mostly dwells behind the scenes. You can find him if you know where to look.</p>
+    </div>
 </div></section>
   </body>
 </html>
