--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
         <a href="http://twitter.com/k25ff"><img src="/assets/images/twitter.png" alt="Tumblr"></a>
     </span>
 </nav>
-    <section class="content"><h1 id="hello-world">Hello World!</h1>
-<h2 id="medium-hello-world">Medium hello world…</h2>
-<h3 id="doing-these-in-markdown-rather-than-html-for-funsies">doing these in Markdown rather than HTML for funsies</h3>
-<h4 id="experimenting-with-templates">experimenting with Templates.</h4>
-<h5 id="i-can-keep-going">I can keep going</h5>
-<h6 id="although-i-think-this-is-the-end">although I think this is… the end…</h6>
+    <section class="content"><h2 id="welcome">Welcome!</h2>
 </section>
   </body>
 </html>
