Changing the rss, maybe?

--- a/chiasmata/blog.html
+++ b/chiasmata/blog.html
@@ -987,6 +987,6 @@
     
 </ol>
 
-<a href="/update/update.rss">RSS Feed</a></section>
+<a href="/update/update.xml">RSS Feed</a></section>
   </body>
 </html>
